syntax = "proto3";

import "status/status.proto";
import "google/protobuf/empty.proto";

option go_package = "api/idebug";

package idebug;

service Debug {
    rpc Prof(ProfRequest) returns (ProfResponse) {}
    rpc Stats(StatsRequest) returns (StatsResponse) {}
    rpc GetLogLevel(google.protobuf.Empty) returns (LogResponse) {}
    rpc SetLogLevel(LogRequest) returns (LogResponse) {}
    rpc StartPprof(StartPprofRequest)returns(StartPprofResponse){}
    rpc StopPprof(google.protobuf.Empty)returns(StopPprofResponse){}
}

message StopPprofResponse{
    status.Status status = 1;
}

message StartPprofRequest {
    string addr = 1;
}

message StartPprofResponse {
    status.Status status = 1;
    string listenaddr = 2;
}

message StatsRequest {
    string name = 1;
}

message StatsResponse {
    status.Status status = 1;
    bytes data = 2;
}

message LogRequest {
    string level = 1;
}

message LogResponse {
    status.Status status = 1;
    string level = 2;
}

message ProfRequest {
    string name = 1;
    string path = 2;
    int64 time = 3;
}

message ProfResponse {
    status.Status status = 1;
}